fixtures/success/createSong.js
module.exports = {
  message: 'Song created successfully',
  id: '60d21b4667d0d8992e610c85'
};
