fixtures/error/renewAccessToken_invalid.js
module.exports = {
    "detail": "Invalid access token",
    "status": 401
}